camila-orchestrator/int/k8s/kind/DDBB/camila-product-ddbb.yml
# sources:
# - https://devopscube.com/deploy-mongodb-kubernetes/
# - https://github.com/scriptcamp/kubernetes-mongodb

---
apiVersion: v1
kind: Namespace
metadata:
  name: mongodb
  labels:
    name: mongodb
spec: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo
  name: mongo
  namespace: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  strategy: {}
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - image: mongodb/mongodb-community-server:8.0.13-ubi9
          name: camila-mongo-product-db
          resources:
            limits:
              cpu: "2"
              memory: 4096Mi
              ephemeral-storage: "1Gi"
            requests:
              cpu: "1"
              memory: 1024Mi
              ephemeral-storage: "1Gi"
          readinessProbe:
            exec:
              command:
                - mongosh
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 90
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - mongosh
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 90
            periodSeconds: 10
          volumeMounts:
            - name: "mongo-data-dir"
              mountPath: "/data/db"
      automountServiceAccountToken: false
      volumes:
        - name: "mongo-data-dir"
          persistentVolumeClaim:
            claimName: "mongo-data"
            readOnly: false

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo-nodeport-svc
  namespace: mongodb
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
      nodePort: 32000
  selector:
    app: mongo
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: mongodb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mongo-nodeport-svc
                port:
                  number: 32000
